--- a/templates/errors/500.html
+++ b/templates/errors/500.html
@@ -11,7 +11,7 @@
                     <h1 class="display-1 text-danger">500</h1>
                     <h2 class="mb-4">{{ _('服务器错误') }}</h2>
                     <p class="lead text-muted mb-4">{{ _('服务器遇到了一个错误，请稍后再试') }}</p>
-                    <a href="{{ url_for('main.index') }}" class="btn btn-primary">
+                    <a href="{{ url_for('pages.index') }}" class="btn btn-primary">
                         <i class="bi bi-house-door me-2"></i>{{ _('返回首页') }}
                     </a>
                 </div>
