--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
         <i class="bi bi-person-plus me-2"></i>{{ _('注册') }}
     </a>
     {% else %}
-    <a class="btn btn-primary btn-lg" href="{{ url_for('main.dashboard') }}">
+    <a class="btn btn-primary btn-lg" href="{{ url_for('pages.dashboard') }}">
         <i class="bi bi-speedometer2 me-2"></i>{{ _('进入仪表盘') }}
     </a>
     {% endif %}
