--- a/templates/devices/device_list.html
+++ b/templates/devices/device_list.html
@@ -45,12 +45,14 @@
                 </select>
             </div>
             <div class="col-md-2 d-flex align-items-end">
-                <button type="submit" class="btn btn-primary me-2">
-                    <i class="bi bi-search me-1"></i>{{ _('搜索') }}
-                </button>
-                <a href="{{ url_for('devices.device_list') }}" class="btn btn-outline-secondary">
-                    <i class="bi bi-x-circle me-1"></i>{{ _('重置') }}
-                </a>
+                <div class="d-flex flex-nowrap">
+                    <button type="submit" class="btn btn-primary me-2 text-nowrap">
+                        <i class="bi bi-search me-1"></i>{{ _('搜索') }}
+                    </button>
+                    <a href="{{ url_for('devices.device_list') }}" class="btn btn-outline-secondary text-nowrap">
+                        <i class="bi bi-x-circle me-1"></i>{{ _('重置') }}
+                    </a>
+                </div>
             </div>
         </form>
     </div>
